--- a/src/app/(routes)/Members/LabHead/components/InfoTabs/ResearchArea/ResearchAreaTab.module.css
+++ b/src/app/(routes)/Members/LabHead/components/InfoTabs/ResearchArea/ResearchAreaTab.module.css
@@ -8,13 +8,15 @@
 }
 
 .researchAreaTab ul {
-  list-style-type: none;
+  display: flex;
+  gap:10px;
+  flex-wrap: wrap;
   padding: 0;
 }
 
 .researchAreaTab ul li {
-  background: #f9f9f9;
+  background: #9f9c9c;
   margin-bottom: 5px;
-  padding: 10px;
+  padding: 4px 6px;
   border-radius: 4px;
 }
