changed the color themes of /, /Research, /Members, /Acheievments, /Updates and navbar

--- a/src/app/(routes)/Members/LabHead/components/InfoTabs/ResearchArea/SocietyList.module.css
+++ b/src/app/(routes)/Members/LabHead/components/InfoTabs/ResearchArea/SocietyList.module.css
@@ -15,7 +15,7 @@
 }
 
 .societyList ul li {
-  background: #9f9c9c;
+  background: #e5e7e9;
   margin-bottom: 5px;
   padding: 4px 6px;
   border-radius: 4px;
