--- a/src/app/(routes)/Members/LabHead/components/InfoTabs/ThesisSupervised/ThesisSupervisedTab.module.css
+++ b/src/app/(routes)/Members/LabHead/components/InfoTabs/ThesisSupervised/ThesisSupervisedTab.module.css
@@ -18,11 +18,11 @@
 }
 
 .subTabsHeader button:hover {
-  color: #0070f3;
+  color: #0891b2;
 }
 
 .activeSubTab {
-  border-bottom: 2px solid #0070f3;
+  border-bottom: 2px solid #0891b2;
 }
 
 .subTabsContent {
