--- a/src/app/(routes)/Members/LabHead/components/InfoTabs/Teachings/TeachingsTab.module.css
+++ b/src/app/(routes)/Members/LabHead/components/InfoTabs/Teachings/TeachingsTab.module.css
@@ -47,8 +47,8 @@
 }
 
 .courseHeader {
-  font-weight: bold;
-  color: #0070f3;
+  font-weight:500;
+  color: #207bb9;
   margin-bottom: 0.5rem;
 }
 
@@ -58,12 +58,15 @@
 
 .courseFooter {
   font-size: 0.9rem;
+  padding-left: 0.5rem;
+  margin: 0.3rem;
   color: #999;
 }
 
 .semester {
   color: rgb(41, 41, 41);
-  padding: 0.2rem 0.5rem;
+  padding: 0.2rem 0;
+  text-wrap: wrap;
   border-radius: 3px;
   font-size: 0.9rem;
 }
